force-app/main/default/objects/Route_Optimization_Result__c/Route_Optimization_Result__c.object-meta.xml
<CustomObject>
    <label>Route Optimization Result</label>
    <nameField>
        <displayFormat>RO-{00000}</displayFormat>
        <label>Result Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Route Optimization Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>