force-app/main/default/objects/Route_Optimization_Result__c/fields/Crew__c.field-meta.xml
<CustomField>
    <fullName>Crew__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Crew</label>
    <referenceTo>Crew__c</referenceTo>
    <relationshipLabel>Route Optimization Results</relationshipLabel>
    <relationshipName>Route_Optimization_Results</relationshipName>
    <type>Lookup</type>
</CustomField>