force-app/main/default/objects/Route_Optimization_Result__c/fields/Minutes_Saved__c.field-meta.xml
<CustomField>
    <fullName>Minutes_Saved__c</fullName>
    <label>Minutes Saved</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>