force-app/main/default/objects/Route_Optimization_Result__c/fields/Optimization_Run_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Optimization_Run_DateTime__c</fullName>
    <label>Optimization Run Date/Time</label>
    <type>DateTime</type>
</CustomField>