force-app/main/default/objects/Route_Optimization_Result__c/fields/Optimized_Drive_Time_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Optimized_Drive_Time_Minutes__c</fullName>
    <label>Optimized Drive Time (Minutes)</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>