force-app/main/default/objects/Route_Optimization_Result__c/fields/Previous_Drive_Time_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Previous_Drive_Time_Minutes__c</fullName>
    <label>Previous Drive Time (Minutes)</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>