force-app/main/default/objects/Route_Optimization_Result__c/fields/Schedule_Day__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Day__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Schedule Day</label>
    <referenceTo>Schedule_Day__c</referenceTo>
    <relationshipLabel>Route Optimization Results</relationshipLabel>
    <relationshipName>Route_Optimization_Results</relationshipName>
    <type>Lookup</type>
</CustomField>